swim_form_old/src/tests/derive/unimplemented/unimplemented_primitive.stderr
error[E0277]: the trait bound `u32: swim_form_old::Form` is not satisfied
  --> $DIR/unimplemented_primitive.rs:17:1
   |
17 | #[form]
   | ^^^^^^^ the trait `swim_form_old::Form` is not implemented for `u32`
   |
   = help: see issue #48214
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
